# shenyu-client-rust

./: .gitignore  Cargo.toml  README.md  README_CN.md
.github/workflows/: ci.bat  ci.sh  publish.yml  rust.yml  shenyu.bat  shenyu.sh
client/: Cargo.toml  config.yml
client/src/: config.rs  core.rs  error.rs  lib.rs  model.rs
client/src/client/: config.rs  mod.rs
examples/: Cargo.toml
examples/src/: actix_web_example.rs  axum_example.rs  lib.rs
shenyu-client-rust/: Cargo.toml
shenyu-client-rust/src/: core.rs  error.rs  lib.rs  model.rs
