# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[workspace.package]
name = "shenyu-client-rust"
version = "0.1.0"
edition = "2021"
homepage = "https://shenyu.apache.org"
rust-version = "1.71.0"
authors = ["The Apache ShenYu Team"]

categories = ["api-bindings", "network-programming", "web-programming", "asynchronous"]
description = "Apache ShenYu Rust client SDK."
repository = "https://github.com/apache/shenyu-rust-client"
keywords = ["shenyu", "client", "sdk", "rust", "apache"]
license = "Apache-2.0"
readme = "README.md"

[workspace]
resolver = "2"
members = [
    "shenyu-client-rust",
    "examples"
]

[workspace.dependencies]
serde = "1.0.190"
serde_json = "1.0.80"
reqwest = "0.12.5"

